# acroform-rs

./: .gitignore  Cargo.toml  FIXES.md  IMPLEMENTATION_SUMMARY.md  README.md
acroform/: Cargo.toml
acroform/examples/: inspect_structure.rs  simple_fill.rs
acroform/src/: api.rs  appearance.rs  field.rs  lib.rs
acroform/tests/: appearance_stream_test.rs  integration_test.rs
designs/: INVESTIGATE.md  OPTION3_IMPLEMENTATION.md
pdf/: Cargo.toml
pdf/src/: file.rs  lib.rs  pdfdocencoding.rs  primitive.rs
pdf/src/object/: types.rs
pdf_derive/: Cargo.toml
